# local_cdn

./: .gitmodules  certgen.nix  flake.nix
certgen/: Cargo.toml  default.nix
certgen/src/: lib.rs  main.rs
service/: cache-proxy.nix  dns.nix
service/cache-proxy/: Cargo.toml  default.nix
service/cache-proxy/http-serde/: Cargo.toml  README.md
service/cache-proxy/http-serde/src/: lib.rs
service/cache-proxy/http-serde/tests/: test.rs
service/cache-proxy/proxy/: Cargo.toml
service/cache-proxy/proxy/src/: connector.rs  lib.rs  main.rs
service/dns/: Cargo.toml  default.nix
service/dns/src/: action.rs  lib.rs
service/dns/src/action/: block.rs  domain.rs  fixed.rs  forward.rs  local_srv.rs
source/: npm.nix
website/: ajax.googleapis.com.nix  google.nix  status.nix
website/ajax.googleapis.com/: default.nix
website/status/: default.nix
