[workspace]

[package]
name = "local_cdn-certgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-hex = { version = "1.11.3", features = ["serde"] }
getrandom = "0.2.14"
rcgen = { version = "0.13.1", default-features = false, features = [
  "crypto",
  "aws_lc_rs", # for rsa key generation
  "pem",
  "zeroize",
] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
time = "0.3.36"
zeroize = "1.7.0"
