[package]
name = "local_cdn-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
hickory-proto = { version = "0.24.1", default-features = false }
hickory-resolver = { version = "0.24.1", default-features = false, features = [
  "tokio-runtime",
  "serde-config",
  "dns-over-https-rustls",
  "native-certs",
] }
hickory-server = "0.24.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = [
  "time",
  "net",
  "rt",
  "rt-multi-thread",
] }
tracing = "0.1.40"
tracing-journald = "0.3.0"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
