[package]
name = "local_cdn-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.6.0", features = ["serde"] }
cacache = { version = "13.0.0", default-features = false }
ciborium = "0.2.2"
futures-util = "0.3.30"
http = "1.1.0"
http-body-util = "0.1.1"
http-cache-semantics = "2.1.0"
hyper = "1.3.1"
hyper-util = { version = "0.1.5", features = [
  "client",
  "server",
  "http1",
  "http2",
  "service",
] }
pin-project = "1.1.5"
serde = { version = "1.0.203", features = ["derive"] }
hyper-rustls = { version = "0.27.2", features = ["http2", "webpki-roots"] }
tokio-rustls = { version = "0.26.0", default-features = false }
tower = "0.4.13"
tower-service = "0.3.2"
tower-layer = "0.3.2"
tower-http = { version = "0.5.2", features = [
  "trace",
  "decompression-br",
  "decompression-deflate",
  "decompression-gzip",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "std",
  "fmt",
  "registry",
] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "net"] }
anyhow = "1.0.86"

[features]
default = []
local = ["tracing-subscriber/ansi", "tracing-subscriber/env-filter"]
